--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>carousel objects</title>
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -13,7 +14,25 @@
 <body>
     
 
+    <div id="container">
 
+        <div id="up">
+            &and;
+        </div>
+
+        <div id="img-container">
+            <img src="img/01.webp" alt="" id="active-img">
+        </div>
+
+        <div id="thumb">
+
+        </div>
+
+        <div id="down">
+            &or;
+        </div>
+
+    </div>
 
 
 
