--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
 
     <div id="container">
 
-        <div id="up">
-            &and;
-        </div>
-
+        
         <div id="img-container">
+            <div id="up">
+                &and;
+            </div>
+            <div id="txt-container">
+                <h2 id="title">
+                    titolo
+                </h2>
+                <div id="description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo non, vitae voluptatem incidunt veniam molestias consequatur. Repellat eos iste incidunt in natus veritatis ullam eligendi repellendus doloribus nemo. Cupiditate, doloremque.
+                </div>
+            </div>
             <img src="img/01.webp" alt="" id="active-img">
+            <div id="down">
+                &or;
+            </div>
         </div>
 
         <div id="thumb">
 
         </div>
 
-        <div id="down">
-            &or;
-        </div>
 
     </div>
 
